# tt-tutorials

./: Backtracking.hs
idris-exercises/: 10_1.idr  10_2.idr  10_3.idr  11_1.idr  11_3.idr  14_2.idr  8_3.idr  ATM.idr  AdderChannel.idr  Arith.idr  AuthTotal.idr  CheckEqNatDec.idr  DataStore.idr  DataStoreOld.idr  DescribeList.idr  DoorJam.idr  Elab.idr  ElemType.idr  Ex9.1.idr  ExactLength.idr  Expr.idr  FFI.idr  File.idr  GuessGame.idr  Hangman.idr  HangmanVerified.idr  InfIO.idr  InfList.idr  InteractiveProving.idr  Interfaces.idr  MergeSort.idr  MergeSortView.idr  Ord.idr  Partial.idr  Printf.idr  ProofTutorial.idr  RemoveElem.idr  Repl.idr  ReverseVec.idr  SF11.idr  (+19 more)
lambda-pi/: LambdaPi.hs  SimplyTyped.hs
liquid-haskell/: README.md  lh-tutorial.cabal  package.yaml  stack.yaml
typeclassopedia/: Applicative.hs  Foldable.hs  Functor.hs  Monad.hs  MonadFix.hs  Traversable.hs
write-you-a-haskell/: ChangeLog.md  LICENSE  write-you-a-haskell.cabal
write-you-a-haskell/ch6/: CallByNeed.hs  CallByValue.hs  HOAS.hs  IO.hs  PHOAS.hs
write-you-a-haskell/ch7/poly/: poly.cabal  stack.yaml
write-you-a-haskell/ch7/poly/src/: Env.hs  Eval.hs  Infer.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs
write-you-a-haskell/ch9/happy/: .gitignore  Eval.hs  Lexer.x  Main.hs  Makefile  Parser.y  Syntax.hs  happyParser.cabal
write-you-a-haskell/protohaskell/: Compiler.hs  CompilerMonad.hs  Flags.hs  Frontend.hs  Name.hs  Pretty.hs  Type.hs
write-you-a-haskell/src/: Checker.hs  Eval.hs  Main.hs  NanoParsec.hs  Parser.hs  Pretty.hs  Syntax.hs
(+17 files in other folders)
