name:                write-you-a-haskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Dmitry Shlagoff
maintainer:          richyannet@yandex.ru
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


executable write-you-a-haskell
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Eval
                       Parser
                       Syntax
                       Pretty
                       Checker
  build-depends:       base >=4.9 && < 4.10,
                       parsec >= 3.1 && < 3.2,
                       haskeline >= 0.7 && < 0.8,
                       mtl >= 2.2 && < 3.0,
                       pretty >= 1.1 && < 1.2,
                       containers >= 0.5 && < 0.6
